More work moving stuff in grid